--- a/style.css
+++ b/style.css
@@ -32,73 +32,137 @@ button:hover{
   background-color: var(--primary-color);
 }
 /* utility styles ends*/
-#theme-switch{
+
+/* nav starts */
+/* General Styles */
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 20px;
+  position: sticky;
+  top: 0;
+  z-index: 11;
+  background: var(--primary-color);
+}
+nav .logo{
+  width: 200px;
+  height: auto;
+}
+nav ul {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+nav ul li {
+  display: inline-flex;
+  align-items: center;
+  margin-left: 60px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: var(--main-color);
+  font-family: Arial, Helvetica, sans-serif;
+  border-bottom: 2px solid transparent;
+  transition: 0.3s ease-in-out;
+  padding: 5px 10px;
+}
+
+li:not(:last-child) a:hover {
+  border-bottom: 2px solid var(--main-color);
+}
+
+
+/* Menu Icon */
+.menu-icon svg {
+  fill: var(--main-color);
+}
+
+/* Theme Switch Button */
+.theme-switch{
   height: 40px;
   width: 40px;
   padding: 0;
   border-radius: 50%;
   background-color: var(--primary-color);
-  display:flex ;
+  display: flex ;
   justify-content: center;
   align-items: center;
-  margin-left: 100px;
-  margin-right: 60px;
   border: 2px solid var(--main-color);
   cursor: pointer;
 }
-#theme-switch svg{
-fill: var(--main-color);
+.theme-switch {
+  height: 40px;
+  width: 40px;
+  padding: 0;
+  border-radius: 50%;
+  background-color: var(--primary-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid var(--main-color);
+  cursor: pointer;
 }
-#theme-switch svg:last-child{
+
+.theme-switch svg {
+  fill: var(--main-color);
+}
+
+ .theme-switch svg:first-child {
   display: none;
 }
-.darkmode #theme-switch svg:first-child{
-  display: none;
-  fill: var(--primary-color);
-}
-.darkmode #theme-switch svg:last-child{
+
+.theme-switch svg:last-child {
   display: block;
 }
-/* nav starts */
-nav{
-  display: flex;
-  justify-content: space-between; 
-  align-items: center;
-  padding: 10px 20px; 
-  margin-bottom: 0;
-  color: var(--main-color);
-  position: sticky;
-  top: 0; 
-  z-index: 1000; 
-  background:var(--primary-color)
+.menu-btn{
+  display: none;
 }
-.logo {
+.sidebar{
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100%;
   width: 250px;
-  height: auto;
+  z-index: 999 ;
+  backdrop-filter: blur(10px);
+  background-color: #ffffff83;
+  box-shadow:  -10px 0 10px rgba(0, 0, 0, 0.479);
+  display: none;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 20px;
 }
-.logo path{
- fill: var(--main-color);
+.sidebar li{
+   width: 100%;
+   margin-top: 30px;
 }
-nav ul{
- display: flex;
- gap: 20px;
- margin-left: 100px;
+.sidebar a{
+  width: 100%;
 }
-nav ul li{
-  display: inline;
-  list-style: none;
+.sidebar li a:first-child{
+ border-bottom: none;
 }
-nav ul li a{
-  text-decoration: none;
-  margin-left: 60px;
-  color: var(--main-color);
-  font-family: Arial, Helvetica, sans-serif;
-  border-bottom: 2px solid transparent;
-  transition: 0.3s ease-in-out;
+.sidebar .close-btn svg{
+  fill: var(--main-color);
+  transform: translate3d(-50px , -20px , 0 );
 }
-li a:hover{
-  border-bottom: 2px solid var(--main-color);
+.sidebar .theme-switch {
+  backdrop-filter: blur(10px);
+  background-color: #ffffff83;
+  border: 2px solid rgba(0, 0, 0, 0.2);
+  position: relative;
+  left: 30px;
+  top: -20px;
 }
+
+
 
 /* nav ends */
 
@@ -652,4 +716,14 @@ footer {
   background: var(--main-color); 
   color: white;
   font-size: 14px;
+}
+
+/* reśposineness start */
+@media screen and (max-width: 840px){
+    .menu-btn{
+      display: block;
+    }
+    .hideOnMobile{
+      display: none;
+    }
 }
